# ECHO-LI-python

./: .gitignore  LICENSE  README.md  plot.sh  pyproject.toml  run.sh
configs/: eqvio_euroc.yaml  eqvio_euroc_euclid.yaml
docs/: GB_results.md  chart_initial_cov.md  colored_noise_2d_augmentation.md  how_to_solve_nees_problem.md  nees_reanchor_guide.md  paper_guideline.md  patch_grid_direct_depth_guide.md  why_1d_sparse_gb_is_hard.md
eqvio/: __init__.py  alignment.py  fast_gift.py  flowdep.py  flowdep_visualiser.py  grid_densifier.py  initialization.py  loop_timer.py  patch_depth_mapper.py  patch_depth_visualiser.py  sparse_vogiatzis.py  temp.diff  vio_filter.py  visualiser.py
eqvio/coordinate_suite/: __init__.py  euclid.py  invdepth.py  normal.py  temp.diff
eqvio/dataserver/: __init__.py  asl_dataset.py
eqvio/mathematical/: __init__.py  eqf_matrices.py  imu_velocity.py  plane_measurement.py  vio_eqf.py  vio_group.py  vio_state.py  vision_measurement.py
scripts/: compute_ate.py  run_euroc.py  run_klt_noise_nees_sweep.sh
tests/: test_ab_tuning.py  test_canopy_hovering.py  test_coordinate_charts.py  test_eqf_matrices.py  test_gaussian_vs_vogiatzis.py  test_grid_densifier.py  test_klt_noise_nees.py  test_long_flight.py  test_nees.py  test_patch_depth_mapper.py  test_planar_landmark_math.py  test_plane_A_matrix.py  test_plane_detector.py  test_plane_fitting.py  test_plane_measurement.py  test_polar3d_convergence.py  test_synthetic_backend.py  test_vio_group.py  test_vio_group_actions.py  test_vio_lift.py  test_warmstart_sensitivity.py  testing_utilities.py
(+5 files in other folders)
